# models/carModel.js
@@ -1,0 +1,12 @@
+const mongoose = require('mongoose');
+
+const carSchema = new mongoose.Schema({
+  make: { type: String, required: true },
+  model: { type: String, required: true },
+  year: { type: Number, required: true },
+  color: { type: String },
+  dailyRate: { type: Number, required: true },
+  available: { type: Boolean, default: true }
+});
+
+module.exports = mongoose.model('Car', carSchema);
