# routes/carRoutes.js
@@ -1,1 +1,10 @@
+const express = require('express');
+const router = express.Router();
+const carsController = require('../controllers/cars');
 
+router.get('/', carsController.getAllCars);
+router.post('/', carsController.createCar);
+router.put('/:id', carsController.updateCar);
+router.delete('/:id', carsController.deleteCar);
+
+module.exports = router;
